# reserver-backend

./: .env  .env.example  .env.mysql  .gitignore  Cargo.toml  Procfile  README.md
.github/workflows/: backend.yml
entity/: Cargo.toml
entity/src/: country.rs  delivery_center.rs  delivery_center_floor.rs  lib.rs  prelude.rs  user.rs  work_desk.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220701_000001_create_table.rs  m20220701_000002_fill_tables.rs  m20220813_000003_create_table_users.rs
migrations/mysql/: 20211207200507_create_users_countries.sql
migrations/pgsql/: 20211207200507_create_users_countries.sql
src/: main.rs
src/core/: authorized_user.rs  mod.rs
src/dto/: floor_with_work_desks.rs  mod.rs  user.rs  work_desk_default.rs
src/entity/: country.rs  mod.rs  prelude.rs  user.rs
src/handler/: mod.rs  user.rs  work_desk.rs
src/repository/: delivery_center.rs  floor.rs  mod.rs  user.rs  work_desk.rs
