[package]
name = "reserver-backend"
version = "0.0.1-alpha.1"
authors = ["Andrei Ormanji <andrew.ormanzhi@gmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.6.0"
actix-identity = "0.4"
actix-redis = "0.10"
actix-tls = "3.0"
actix-web = "4.0"
actix-http = "3.0"
actix-http-test = "3.0.0-beta.13"
actix-test = "0.1.0-beta.13"
actix-files = "0.6"
actix-web-grants = "3.0.0-beta.6"
actix-web-httpauth = "0.6"
actix-web-validator = "2.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
sea-orm = { version = "^0", features = [
    "debug-print",
    # "sqlx-sqlite",
    # "sqlx-mysql",
    "sqlx-postgres",
    "runtime-actix-native-tls",
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.8"
serde_urlencoded = "0.7"
tokio = { version = "1.16", features = ["rt-multi-thread"] }
validator = { version = "0.14", features = ["derive", "validator_derive"] }

[dev-dependencies]
sea-orm = { version = "^0", features = [
    "debug-print",
    "mock",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-actix-native-tls",
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
