[package]
name = "reserver-backend"
version = "0.0.1-alpha.1"
authors = ["Andrei Ormanji <andrew.ormanzhi@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-httpauth = "0.6"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
sea-orm = { version = "^0", features = [
    "debug-print",
    # "sqlx-sqlite",
    # "sqlx-mysql",
    "sqlx-postgres",
    "runtime-actix-native-tls",
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.9"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
sea-orm = { version = "^0", features = [
    "debug-print",
    "mock",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-actix-native-tls",
    "macros",
    "with-json",
    "with-chrono",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
