[package]
name = "reserver-backend"
version = "0.0.1-alpha.1"
authors = ["Andrei Ormanji <andrew.ormanzhi@gmail.com>"]
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.1"
actix-web-httpauth = "0.8"
anyhow = "1.0"
time = { version = "*", features = ["serde-human-readable", "serde-well-known"] }
time-tz ={ version = "*" }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
listenfd = "1.0"
sea-orm = { version = "^0", default-features = false, features = [
    "debug-print",
    "runtime-actix-native-tls",
    # "sqlx-sqlite",
    # "sqlx-mysql",
    "sqlx-postgres",
    "macros",
    "with-time",
    # "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "^0"
serde_urlencoded = "^0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
paperclip = { version = "0.7", features = ["actix4", "v3"] }

[dev-dependencies]
sea-orm = { version = "^0", features = [
    "debug-print",
    "mock",
    "macros",
    "runtime-actix-native-tls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    # "with-chrono",
    "with-time",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
