[package]
name = "entity"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0", features = [
    # "debug-print",
    # "runtime-actix-native-tls",
    # "sqlx-sqlite",
    # "sqlx-mysql",
    "sqlx-postgres",
    "macros",
    "with-time",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], default-features = false }
time = { version = "0.3", features = ["serde-human-readable", "serde-well-known"] }
