[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
futures = { version = "^0.3" }

[dependencies.sea-orm-migration]
version = "^0"
features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-actix-native-tls",
    "sqlx-mysql",
    "sqlx-postgres",
]
